MDEV-37579 use-after-free in MDL_context::release_lock on FLUSH TABLE GTT

use-after-free happens after HANDLER OPEN and two LOCK TABLES.

HANDLER locks are moved to MDL_EXPLICIT duration to avoid unlocking at
transaction end. There is a little inconsistency in operation:
1. handler->mdl_request.ticket is populated from table_list in
   mysql_ha_open
2. allegedly, it should match table_list->table->mdl_ticket
3. in mysql_ha_set_explicit_lock_duration,
   hash_tables->table->mdl_ticket was used to fix duration
4. in mysql_ha_close_table, as a result of FLUSH TABLES,
   handler->mdl_request.ticket is released.

For global temporary tables child handle, (2) is violated. There is no
lock in table->mdl_ticket, just as in any temporary table.

However, there is a lock ticket in table_list->mdl_request, because of
locked tables mode.

Solution:
use hash_tables->mdl_request.ticket in mysql_ha_set_explicit_lock_duration.